--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,4 +21,7 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#072493",
+  "cSpell.words": [
+    "junglejumbles"
+  ],
 }
